# korean-ordinance-mcp

./: .env.example  .gitignore  BUILD_MANIFEST.md  README.md  claude_desktop_config.example.json  pyproject.toml
core/: cache.py  config.py  models.py
core/adapters/: base.py  eu_eurlex.py  jp_egov.py  kr_law.py  kr_local.py  uk_legislation.py  us_govinfo.py
core/llm/: amendment_directives.py  client.py  decision_extractor.py  diff_table.py  draft_ordinance.py  extract_keywords.py  prompts.py  relevance_filter.py  self_check.py  summarize.py
core/pipeline/: stage1_screening.py  stage3_drafting.py
core/templates/: render.py  report_stage1.py
core/utils/: article_parser.py  citation.py  parallel.py
data/reference/diff_table_samples/: 2670_도세감면.md  2671_자동차임대.md  공식매뉴얼_2면대비표.md  임병수_부분개정법령안.md
mcp_server/: server.py
public_demo/: README.md  index.html  vercel.json
public_demo/downloads/: stage1_입법례_스크리닝.docx  stage1_입법례_스크리닝.md  stage2_결정카드.docx  stage2_결정카드.md  stage3_개정안_신구조문대비표포함.docx  stage3_제정안.docx  stage4_셀프점검_개정안.docx  stage4_셀프점검_개정안.md  stage4_셀프점검_제정안.docx  stage4_셀프점검_제정안.md
scripts/: capture_fixtures.py  smoke_test.py  validate_stage3.py  verify_mcp.py
tests/: test_adapter_parsers.py  test_article_parser.py  test_conflict_check_guard.py
tests/fixtures/: eu_eurlex_search.html  jp_egov_search.json  kr_law_search.xml  kr_local_search.xml  uk_legislation_search.xml  us_govinfo_search.json
