[project]
name = "gg-council-legislation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.101.0",
    "beautifulsoup4>=4.14.3",
    "diskcache>=5.6.3",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
